--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^8.2.0",
-    "mongodb": "^3.5.8"
+    "mongodb": "^3.5.8",
+    "mongoose": "^5.9.18"
   }
 }
