--- a/task-manager/.env.sample
+++ b/task-manager/.env.sample
@@ -1,3 +1,5 @@
+PORT=<PORT>
 MONGODB_URI=<MONGODB_URI>
 SENDGRID_API_KEY=<SENDGRID_API_KEY>
 SENDGRID_EMAIL_SENDER=<SENDGRID_EMAIL_SENDER>
+JWT_SECRET=<JWT_SECRET>
